--- a/trt/arm/docker-compose.yaml
+++ b/trt/arm/docker-compose.yaml
@@ -5,10 +5,14 @@ services:
       context: .
       dockerfile: ./arm.dockerfile
     volumes:
-      - ./data/2022-11-18_640_256/images:/app/images
+      - ./data/images:/app/images
       - ./trained-inference-models/:/app/trained-inference-models/
-      - ./outputs/:/app/outputs/
+      - ./validation/:/app/validation/
       - ./build_engine.sh:/app/build_engine.sh
+    environment:
+      - MODEL_PATH=/app/trained-inference-models/2022-12-16
+      - IM_W=640
+      - IM_H=256
     deploy:
         resources:
           reservations:
