--- a/trt/x86/docker-compose.yaml
+++ b/trt/x86/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  generate_trt:
+  generate_trt_x86:
     build:
       context: .
       dockerfile: ./x86.dockerfile
@@ -8,7 +8,6 @@ services:
       - ./data/images:/app/images
       - ./trained-inference-models/:/app/trained-inference-models/
       - ./validation/:/app/validation/
-      - ./build_engine.sh:/app/build_engine.sh
     environment:
       - MODEL_PATH=/app/trained-inference-models/2022-12-16
       - IM_W=640
@@ -20,4 +19,4 @@ services:
               - driver: nvidia
                 count: 1
                 capabilities: [gpu]
-    command: bash /app/build_engine.sh
+    command: bash /repos/LMI_AI_Solutions/object_detectors/yolov5/trt/x86/build_engine.sh
